@@ -1,3 +1,13 @@
+2010-04-27  Andrew Haley  <aph@redhat.com>
+
+        * gnu/javax/print/ipp/IppResponse.java (parseAttributes): Handle
+        IppValueTag.UNKNOWN.  
+        * gnu/javax/print/ipp/IppRequest.java (writeOperationAttributes):
+        Handle RequestedAttributes.
+        * gnu/javax/print/ipp/IppPrintService.java (processResponse): Add
+        DocFlavor.SERVICE_FORMATTED.PAGEABLE and
+        DocFlavor.SERVICE_FORMATTED.PRINTABLE.
+
 2010-01-15  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>
 
 	PR libgcj/38251
